--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 		<title> Hello Veda! </title>
 		</head>
 	<body>
-		<h1> HI HI</h1>
+		<h1> This is first web page through this coursera course</h1>
 	</body>
 </html>
+
